# ddbcereal

./: .readthedocs.yaml  LICENSE.txt  README.md  requirements.ci.txt  setup.cfg
.github/workflows/: test.yml
benchmarks/: isinstance_class_vs_tuple.py  str_vs_fliteral.py  vs_boto3_deserialize.py  vs_boto3_serialize.py
ddbcereal/: __init__.py  deserializing.py  dispatching.py  exceptions.py  serializing.py  types.py
docs/: changelog.rst  conf.py  index.rst  performance.rst  usage.rst
tests/: test_deserializing.py  test_serializing.py
