[metadata]
name = ddbcereal
version = attr: ddbcereal.VERSION
author = Justin Turner Arthur
author_email = justinarthur@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustinTArthur/ddbcereal
classifiers =
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
license = Apache License 2.0
license_files =
    LICENSE.txt

[options]
packages = ddbcereal
python_requires = >=3.6

[options.package_data]
ddbcereal = py.typed
